<resources>
    <string name="app_name">StudyMate</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="who_are_you">Who Are You ?</string>
    <string name="admin_login">Admin login</string>
    <string name="faculty_or_student">Faculty Or Student</string>
    <string name="enter_password_and_login_here">Enter password and login here ~</string>
    <string name="stx_clg">Sutex Bank College Of Computer Application And Science</string>
    <string name="user_id">User ID</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="want_to_change_email">Want to change email ?</string>
    <string name="discover_studymate_the_ultimate_android_data_management_tool_effortlessly_create_view_update_and_delete_records_with_our_user_friendly_interface_blending_xml_for_a_sleek_frontend_and_a_secure_kotlin_backend_ensure_data_integrity_customize_fields_and_work_offline_streamline_your_crud_operations_with_studymate_today">Discover StudyMate, the ultimate Android data management tool. Effortlessly create, view, update, and delete records with our user-friendly interface, blending XML for a sleek frontend and a secure Kotlin backend. Ensure data integrity, customize fields, and work offline. Streamline your CRUD operations with StudyMate today!</string>
    <string name="student_management_system">Student Management System</string>
    <string name="a_front_end_developer_is_responsible_for_developing_new_user_facing_features_determining_the_structure_and_design_of_web_pages_building_reusable_codes_optimizing_page_loading_times_and_using_a_variety_of_markup_languages_to_create_the_web_pages">A Front-End Developer is responsible for developing new user-facing features, determining the structure and design of web pages, building reusable codes, optimizing page loading times, and using a variety of markup languages to create the web pages.</string>
    <string name="front_end_dev">Front-End Dev</string>
    <string name="rajat_kevat">Rajat Kevat</string>
    <string name="backend_developer_responsibilities_include_creating_maintaining_testing_and_debugging_the_entire_back_end_of_an_application_or_system_this_includes_the_core_application_logic_databases_data_and_application_integration_api_and_other_processes_taking_place_behind_the_scenes">Backend developer responsibilities include creating, maintaining, testing, and debugging the entire back end of an application or system. This includes the core application logic, databases, data and application integration, API, and other processes taking place behind the scenes.</string>
    <string name="back_end_dev">Back-End Dev</string>
    <string name="piyush_makwana">Piyush Makwana</string>
    <string name="dear_admin_login_here">Dear Admin Login Here ~</string>
    <string name="enter_org_no">Enter Org No</string>
    <string name="enter_admin_name">Enter Admin Name</string>
    <string name="enter_admin_email">Enter Admin Email</string>
    <string name="not_admin">Not Admin ?</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="faculties">Available Faculties</string>
    <string name="students">Students List</string>
    <string name="notices">All Notices</string>
    <string name="assignments">Given Assignments</string>
    <string name="about_us">About US</string>
    <string name="contact_us">Contact Us</string>
    <string name="back_button">Back Button</string>
    <string name="admin_id">Admin id</string>
    <string name="admin_name">Admin Name</string>
    <string name="you_example_com">you@example.com</string>
    <string name="update_your_detail">Update your detail</string>
    <string name="add_assignment">Add Assignment</string>
    <string name="not_want_to_add">Not Want To Add ?</string>
    <string name="add_assignments">Add Assignments</string>
    <string name="email">email</string>
    <string name="name">name</string>
    <string name="subject">Subject</string>
    <string name="notice_des">Notice Des</string>
    <string name="notice_name">Notice Name</string>
    <string name="date">Date</string>
    <string name="assignment_desc">Assignment desc</string>
    <string name="assignment_name">Assignment Name</string>
    <string name="admin">Admin</string>
    <string name="admin_gmail_com">Admin@gmail.com</string>
    <string name="admin_email">Admin Email</string>
    <string name="student_sid">Student Sid</string>
    <string name="update_name">Update Name</string>
    <string name="update_pass_for_student">Update Pass For Student</string>
    <string name="update_email">Update Email</string>
    <string name="update_class">Update Class</string>
    <string name="update_student">Update Student</string>
    <string name="delete_student">Delete Student</string>
    <string name="oops_under_development">Oops Under Development !</string>
    <string name="name_of_student">Name Of Student</string>
    <string name="email_of_student">Email Of Student</string>
    <string name="create_pass_for_student">Create Pass For Student</string>
    <string name="enter_class">Enter Class</string>
    <string name="add_student">Add Student</string>
    <string name="add_notices">Add Notices</string>
    <string name="name_of_notice">Name Of Notice</string>
    <string name="enter_description">Enter Description</string>
    <string name="enter_date">Enter Date</string>
    <string name="faculty_fid">Faculty Fid</string>
    <string name="update_pass_for_faculty">Update Pass For Faculty</string>
    <string name="update_subject">Update Subject</string>
    <string name="update_faculty">Update Faculty</string>
    <string name="delete_faculty">Delete Faculty</string>
    <string name="name_of_faculty">Name Of Faculty</string>
    <string name="create_pass_for_faculty">Create Pass For Faculty</string>
    <string name="enter_subject">Enter Subject</string>
    <string name="add_faculty">Add Faculty</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="go_to_home">Go to home</string>
    <string name="enter_name">Enter Name</string>
    <string name="just_send">Just Send</string>
    <string name="back_to_home">Back To Home</string>
    <string name="name_of_assignment">Name Of Assignment</string>
    <string name="submit_date">Submit Date</string>
    <string name="enter_assignment_type">Enter Assignment Type</string>
    <string name="admin_profile">Admin Profile</string>
    <string name="data">Data</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="communicate">Communicate</string>
    <string name="Class">Class</string>
    <string name="v1_7_8_alpha10">v127.0.0.1</string>
    <string name="create_an_new_account">Create an new account</string>
    <string name="enter_admin_password">Enter Admin Password</string>
    <string name="create_your_password">Create your password</string>
</resources>