<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/admin">

        <menu>

            <item
                android:id="@+id/admin_nav_profile"
                android:title="@string/admin_profile"
                android:icon="@drawable/admin_profile" />

            <item
                android:id="@+id/admin_nav_addfaculty"
                android:title="@string/add_faculty"
                android:icon="@drawable/add_faculty" />

            <item
                android:id="@+id/admin_nav_addstudent"
                android:title="@string/add_student"
                android:icon="@drawable/add_student" />

        </menu>

    </item>


    <item android:title="@string/data">

        <menu>

            <item
                android:id="@+id/admin_nav_notices"
                android:title="@string/add_notices"
                android:icon="@drawable/add_notices" />

            <item
                android:id="@+id/admin_nav_assignments"
                android:title="@string/add_assignments"
                android:icon="@drawable/add_assignments" />

        </menu>

    </item>

    <item android:title="@string/profile">

        <menu>

            <item
                android:id="@+id/admin_nav_logout"
                android:title="@string/logout"
                android:icon="@drawable/logout" />

        </menu>

    </item>

    <item android:title="@string/communicate">

        <menu>

            <item
                android:id="@+id/admin_nav_contactUs"
                android:title="@string/contact_us"
                android:icon="@drawable/contact_us" />

            <item
                android:id="@+id/admin_nav_aboutUs"
                android:title="@string/about_us"
                android:icon="@drawable/about_us" />

        </menu>

    </item>

</menu>