<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".faculty.Faculty">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/under_dev"
            android:src="@drawable/admin_profile"
            android:layout_width="match_parent"
            android:layout_height="256dp"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="72dp"
            android:layout_marginRight="72dp"
            android:gravity="center"
            android:text="@string/stx_clg"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="27dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="42dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="8dp"
            app:placeholderText="you@example.com">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EdtFacultyEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/email"
                android:drawablePadding="10dp"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCheck"
            style="@style/Widget.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="12dp"
            android:translationZ="2dp"
            android:stateListAnimator="@null"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="8dp"
            android:text="@string/login" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBack"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="17dp"
            android:text="@string/go_to_home" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>